--- a/advanced-quantitative-methods-fall-2019/readme
+++ b/advanced-quantitative-methods-fall-2019/readme
@@ -1,1 +1,3 @@
+Data can be found on
+https://dataverse.harvard.edu/dataset.xhtml;jsessionid=dba3e01363d806b1f27d425eabf8?persistentId=doi%3A10.7910%2FDVN%2FGPRVC6&version=&q=&fileTypeGroupFacet=&fileAccess=&fileSortField=size
 
